# OwLog

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  OwLogConfig.cmake  README.md  sonar-project.properties
include/: FileStreamSink.hpp  Logger.hpp  OwLog.hpp  ProfileScope.hpp  Profiler.hpp  Sink.hpp  StreamSink.hpp
include/Sinks/: ColorSink.hpp  FileStreamSink.hpp  SocketSink.hpp  StreamSink.hpp  TerminalSink.hpp
source/: Logger.cpp  ProfileScope.cpp  Profiler.cpp  StreamSink.cpp
source/Sinks/: ColorSink.cpp  FileStreamSink.cpp  SocketSink.cpp  StreamSink.cpp  TerminalSink.cpp
tests/: CMakeLists.txt  test_Logger.cpp  test_Profiler.cpp  test_Sinks.cpp  test_main.cpp
